# brickrun

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  setup.cmake
debian/: changelog  control  rules
doc/: CMakeLists.txt  brickrun.rst
docker/: setup.sh
src/: CMakeLists.txt  brickrun.vala  version.vala.in
